feat(spring-boot): upgrade to version 4